final index.html update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="intro-section">
-        <h1>Welcome to the Color Palatte Generator!</h1>
+        <h1>Welcome to the Color Palette Generator!</h1>
         <h2>Below is a robust application that creates a color palette tailored for you. Are you looking for a color
             palette but you're not sure what you're looking for? Let us provide some inspiration!
         </h2>
